--- a/alutech_roteo.yaml
+++ b/alutech_roteo.yaml
@@ -6,7 +6,7 @@ substitutions:
   platform: "esp32dev"
   manufacturer: "espressif"
   project_name: "alutech-roteo"
-  version: "1.4.4"
+  version: "1.4.5"
 
   # Config
   transit_time_lower_bound: "2"
@@ -54,15 +54,12 @@ esphome:
   friendly_name: ${friendly_name}
   on_boot:
     then:
-      - sensor.template.publish:
-          id: pedestrian_gate_open_number
-          state: !lambda "return id(pedestrian_gate_open_count);"
-      - sensor.template.publish:
-          id: vehicle_gate_open_number
-          state: !lambda "return id(vehicle_gate_open_count);"
-      - sensor.template.publish:
-          id: gate_move_time
-          state: !lambda "return id(gate_move_length);"
+      - component.update: pedestrian_gate_open_number
+      - component.update: pedestrian_gate_last_open_time
+      - component.update: vehicle_gate_open_number
+      - component.update: vehicle_gate_last_open_time
+      - component.update: gate_move_time
+      - component.update: last_signal_source
       - script.execute:
           id: turn_on_buzzer
           duration_ms: ${startup_beep_length}
@@ -162,6 +159,21 @@ globals:
     type: time_t
     restore_value: False
     initial_value: "0"
+
+  - id: gate_move_internal_signal
+    type: bool
+    restore_value: False
+    initial_value: "false"
+
+  - id: gate_move_signal_source
+    type: std::string
+    restore_value: True
+    initial_value: '"Unknown"'
+
+  - id: remote_control_bool
+    type: bool
+    restore_value: False
+    initial_value: "false"
 
   - id: gate_move_length
     type: time_t
@@ -483,6 +495,12 @@ binary_sensor:
   - platform: status
     name: "Node status"
 
+  - platform: template
+    name: "Remote controlled"
+    id: remote_control
+    lambda: "return id(remote_control_bool);"
+    icon: "mdi:remote"
+
   # Indicates if gate is stuck.
   - platform: template
     name: "Gate stuck"
@@ -568,6 +586,25 @@ binary_sensor:
     device_class: "moving"
     on_press:
       then:
+        - if:
+            condition:
+              lambda: "return id(gate_move_internal_signal);"
+            then:
+              - globals.set:
+                  id: gate_move_internal_signal
+                  value: "false"
+              - globals.set:
+                  id: gate_move_signal_source
+                  value: '"HomeAssistant"'
+              - component.update: last_signal_source
+            else:
+              - globals.set:
+                  id: remote_control_bool
+                  value: "true"
+              - globals.set:
+                  id: gate_move_signal_source
+                  value: '"Remote"'
+              - component.update: last_signal_source
         - light.turn_on:
             id: gate_moving_light
             effect: strobe
@@ -578,6 +615,9 @@ binary_sensor:
     on_release:
       then:
         - light.turn_off: gate_moving_light
+        - globals.set:
+            id: remote_control_bool
+            value: "false"
         - globals.set:
             id: gate_move_length
             value: !lambda "return id(gps_time).now().timestamp - id(gate_move_start_time);"
@@ -634,6 +674,14 @@ text_sensor:
     mac_address:
       name: "MAC address"
 
+  - platform: template
+    id: last_signal_source
+    name: "Last signal source"
+    update_interval: never
+    entity_category: "diagnostic"
+    lambda: return {id(gate_move_signal_source)};
+    icon: "mdi:devices"
+
 sensor:
   - platform: wifi_signal
     name: "WLAN RSSI"
@@ -646,6 +694,7 @@ sensor:
     update_interval: never
     state_class: "total_increasing"
     icon: "mdi:counter"
+    lambda: "return id(pedestrian_gate_open_count);"
 
   - platform: template
     id: pedestrian_gate_last_open_time
@@ -654,7 +703,7 @@ sensor:
       if (id(pedestrian_gate_open_time) > 0) {
         return id(pedestrian_gate_open_time);
       } else {
-        return {};
+        return NAN;
       }
     update_interval: never
     device_class: "timestamp"
@@ -666,6 +715,7 @@ sensor:
     update_interval: never
     state_class: "total_increasing"
     icon: "mdi:counter"
+    lambda: "return id(vehicle_gate_open_count);"
 
   - platform: template
     id: vehicle_gate_last_open_time
@@ -674,7 +724,7 @@ sensor:
       if (id(vehicle_gate_open_time) > 0) {
         return id(vehicle_gate_open_time);
       } else {
-        return {};
+        return NAN;
       }
     update_interval: never
     device_class: "timestamp"
@@ -687,6 +737,7 @@ sensor:
     device_class: "duration"
     unit_of_measurement: "s"
     entity_category: "diagnostic"
+    lambda: "return id(gate_move_length);"
 
 number:
   - platform: template
@@ -764,6 +815,7 @@ cover:
             condition:
               and:
                 - binary_sensor.is_off: vehicle_gate_open
+                - binary_sensor.is_off: remote_control
                 - binary_sensor.is_on: gate_moving
             then:
               - button.press: step_by_step
@@ -806,6 +858,7 @@ cover:
             condition:
               and:
                 - binary_sensor.is_off: pedestrian_gate_open
+                - binary_sensor.is_off: remote_control
                 - binary_sensor.is_on: gate_moving
             then:
               - button.press: step_by_step
@@ -862,11 +915,21 @@ button:
     id: step_by_step
     output: relay1
     duration: 100ms
+    on_press:
+      then:
+        - globals.set:
+            id: gate_move_internal_signal
+            value: "true"
 
   - platform: output
     id: pedestrian
     output: relay2
     duration: 100ms
+    on_press:
+      then:
+        - globals.set:
+            id: gate_move_internal_signal
+            value: "true"
 
   - platform: template
     name: "Short beep"
