--- a/alutech_roteo.yaml
+++ b/alutech_roteo.yaml
@@ -396,9 +396,9 @@ script:
       - light.turn_on:
           id: light_strip
           brightness: 100%
-          red: !lambda "if(id(remote_control).state) return 1.0; else return 0.9;"
-          green: !lambda "if(id(remote_control).state) return 0.5; else return 0.17;"
-          blue: !lambda "if(id(remote_control).state) return 0.0; else return 0.31;"
+          red: 100%
+          green: !lambda "if(id(remote_control_bool)) return 0.5; else return 0;"
+          blue: !lambda "if(id(remote_control_bool)) return 0.0; else return 0.58;"
           effect: !lambda "return effect;"
 
   - id: fx_move_start
