--- a/alutech_roteo.yaml
+++ b/alutech_roteo.yaml
@@ -1104,27 +1104,39 @@ light:
           name: "Scroll Down"
           update_interval: 70ms
           lambda: |-
-            static uint16_t progress = 0;
-            if (initial_run)
-              progress = 0;
-            it.all() = Color::BLACK;
-            it[progress] = current_color;
-            if (progress == it.size() - 1) {
-              progress = 0;
-            } else {
-              progress++;
-            }
+                static uint16_t progress = 0;
+                if (initial_run)
+                  progress = 0;
+                it.all() = Color::BLACK;
+                size_t n = it.size();
+                // current pixel
+                it[progress] = current_color;
+                // previous pixels for a 2-LED fading trail
+                int prev1 = (progress == 0) ? (n - 1) : (progress - 1);
+                int prev2 = (prev1 == 0) ? (n - 1) : (prev1 - 1);
+                it[prev1] = current_color.darken(90);
+                it[prev2] = current_color.darken(150);
+                // advance and wrap
+                progress = (progress + 1) % n;
       - addressable_lambda:
           name: "Scroll Up"
           update_interval: 70ms
           lambda: |-
-            static uint16_t progress = it.size() - 1;
-            if (initial_run)
-              int progress = it.size() - 1;
-            it.all() = Color::BLACK;
-            it[progress] = current_color;
-            if (progress == 0) {
-              progress = it.size() - 1;
-            } else {
-              progress--;
-            }
+                static uint16_t progress = it.size() - 1;
+                if (initial_run)
+                  progress = it.size() - 1;
+                it.all() = Color::BLACK;
+                size_t n = it.size();
+                // current pixel
+                it[progress] = current_color;
+                // next pixels for a 2-LED fading trail (ahead in the upward direction)
+                int next1 = (progress + 1) % n;
+                int next2 = (progress + 2) % n;
+                it[next1] = current_color.darken(90);
+                it[next2] = current_color.darken(150);
+                // advance (move upward) and wrap
+                if (progress == 0) {
+                  progress = n - 1;
+                } else {
+                  progress--;
+                }
