--- a/alutech_roteo.yaml
+++ b/alutech_roteo.yaml
@@ -1,62 +1,59 @@
 substitutions:
   name: "avocado"
-  friendly_name: "avocado"
+  friendly_name: "Avocado"
 
-  # Project
+  # [Project]
   platform: "esp32dev"
   manufacturer: "espressif"
   project_name: "alutech-roteo"
   version: "1.4.8"
 
-  # Config
-  transit_time_lower_bound: "2"
-  transit_time_upper_bound: "5"
-  output_freq: "4000Hz"
-  output_level: "0.5"
+  # [Config]
+  transit_time_lower_bound_seconds: "2"
+  transit_time_upper_bound_seconds: "5"
   motion_sensor: "binary_sensor.munin_home_motion_1"
 
-  # Volume
+  # [Buzzer]
   min_volume: "0.0"
   max_volume: "1.0"
-
-  # Buzzer
   short_beep_length: "100"
   long_beep_length: "500"
   startup_beep_volume: "1.0"
   startup_beep_length: "100"
+  buzzer_freq: 4000Hz
 
-  # RTTTL
+  # [RTTTL]
   rtttl_confirm: "0"
   rtttl_reject: "1"
   rtttl_warning: "2"
   rtttl_success: "3"
   rtttl_movement: "4"
 
-  # UART
+  # [UART]
   baudrate: "9600"
 
-  # Control sources
+  # [Control Sources]
   source_unknown: "0"
   source_hass: "1"
   source_remote: "2"
   source_remote_or_auto: "3"
 
-  # Relay
+  # [Relay]
   pulse_length: 100ms
 
-  # GPIOs
-  status_led_pin: 23
-  led_strip_pin: 19
-  relay1_pin: 32
-  relay2_pin: 33
-  relay3_pin: 25
-  relay4_pin: 26
+  # [GPIOs]
   buzzer_pin: 17
   vibration_sense_pin: 18
+  led_strip_pin: 19
   move_sense_pin: 21
+  relay1_pin: 32
+  relay2_pin: 33
+  status_led_pin: 23
+  relay3_pin: 25
+  relay4_pin: 26
   rx_pin: RX
 
-  # Error
+  # [Error]
   error_siren: "Can't play tone while sounding the siren."
 
 esphome:
@@ -82,11 +79,9 @@ esp32:
   framework:
     type: esp-idf
 
-# Enable logging
 logger:
   baud_rate: 0
 
-# Enable Home Assistant API
 api:
   encryption:
     key: !secret avocado_api_key
@@ -151,10 +146,8 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Avocado Fallback Hotspot"
+    ssid: "${friendly_name} Fallback Hotspot"
     password: !secret avocado_fallback_password
 
 captive_portal:
@@ -332,7 +325,7 @@ script:
               condition:
                 - lambda: |-
                     time_t seconds_since_move_start = id(gps_time).now().timestamp - id(gate_move_start_time);
-                    return (seconds_since_move_start >= (id(vehicle_gate_opening_time).state + ${transit_time_upper_bound}));
+                    return (seconds_since_move_start >= (id(vehicle_gate_opening_time).state + ${transit_time_upper_bound_seconds}));
               then:
                 - button.press: step_by_step
                 - globals.set:
@@ -387,10 +380,10 @@ script:
             - output.turn_on: buzzer
             - output.ledc.set_frequency:
                 id: buzzer
-                frequency: ${output_freq}
+                frequency: ${buzzer_freq}
             - output.set_level:
                 id: buzzer
-                level: ${output_level}
+                level: 50%
             - delay: !lambda "return duration_ms;"
             - output.turn_off: buzzer
 
@@ -704,9 +697,9 @@ binary_sensor:
             condition:
               - lambda: |-
                   return
-                    id(pedestrian_gate_opening_time).state > ${transit_time_lower_bound} &&
-                    id(gate_move_length) > (id(pedestrian_gate_opening_time).state - ${transit_time_lower_bound}) &&
-                    id(gate_move_length) < (id(pedestrian_gate_opening_time).state + ${transit_time_upper_bound});
+                    id(pedestrian_gate_opening_time).state > ${transit_time_lower_bound_seconds} &&
+                    id(gate_move_length) > (id(pedestrian_gate_opening_time).state - ${transit_time_lower_bound_seconds}) &&
+                    id(gate_move_length) < (id(pedestrian_gate_opening_time).state + ${transit_time_upper_bound_seconds});
             then:
               - cover.template.publish:
                   id: pedestrian_gate
@@ -718,9 +711,9 @@ binary_sensor:
             condition:
               - lambda: |-
                   return
-                    id(vehicle_gate_opening_time).state > ${transit_time_lower_bound} &&
-                    id(gate_move_length) > (id(vehicle_gate_opening_time).state - ${transit_time_lower_bound}) &&
-                    id(gate_move_length) < (id(vehicle_gate_opening_time).state + ${transit_time_upper_bound});
+                    id(vehicle_gate_opening_time).state > ${transit_time_lower_bound_seconds} &&
+                    id(gate_move_length) > (id(vehicle_gate_opening_time).state - ${transit_time_lower_bound_seconds}) &&
+                    id(gate_move_length) < (id(vehicle_gate_opening_time).state + ${transit_time_upper_bound_seconds});
             then:
               - cover.template.publish:
                   id: gate
@@ -972,7 +965,7 @@ output:
   - platform: ledc
     pin: ${buzzer_pin}
     id: buzzer
-    frequency: ${output_freq}
+    frequency: ${buzzer_freq}
 
 uart:
   rx_pin: ${rx_pin}
