--- a/siren.yaml
+++ b/siren.yaml
@@ -1,41 +1,34 @@
 substitutions:
   name: "melon"
-  friendly_name: "melon"
+  friendly_name: "Melon"
 
-  # Project
+  # [Project]
   platform: "d1_mini"
   manufacturer: "lolin"
   project_name: "siren"
   version: "1.3.0"
 
-  # Config
-  output_freq: "2700Hz"
-  output_level: "0.3"
-
-  # Volume
+  # [Buzzer]
   min_volume: "0.0"
   max_volume: "1.0"
-
-  # Beep
   short_beep_length: "100"
   long_beep_length: "500"
+  startup_beep_volume: "0.3"
+  startup_beep_length: "100"
+  buzzer_freq: 2700Hz
 
-  # RTTTL
+  # [RTTTL]
   rtttl_confirm: "0"
   rtttl_reject: "1"
   rtttl_warning: "2"
   rtttl_success: "3"
 
-  # Startup
-  startup_beep_volume: "0.3"
-  startup_beep_length: "100"
-
-  # GPIOs
+  # [GPIOs]
   status_led_pin: 2
   rgb_led_pin: D2
   buzzer_pin: D8
 
-  # Error
+  # [Error]
   error_siren: "Can't play tone while sounding the siren."
   error_unknown_tone: "Unknown tone %s"
 
@@ -54,9 +47,9 @@ esphome:
           duration_ms: ${startup_beep_length}
           volume: ${startup_beep_volume}
           priority: False
-          red: 0.0
-          green: 1.0
-          blue: 0.0
+          red: 0%
+          green: 100%
+          blue: 0%
 
 esp8266:
   board: ${platform}
@@ -113,10 +106,8 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_iot_password
   min_auth_mode: WPA2
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Melon Fallback Hotspot"
+    ssid: "${friendly_name} Fallback Hotspot"
     password: !secret melon_fallback_password
 
 captive_portal:
@@ -136,7 +127,7 @@ output:
   - platform: esp8266_pwm
     pin: ${buzzer_pin}
     id: buzzer
-    frequency: ${output_freq}
+    frequency: ${buzzer_freq}
     min_power: ${min_volume}
     max_power: ${max_volume}
 
@@ -200,10 +191,10 @@ script:
             - output.turn_on: buzzer
             - output.esp8266_pwm.set_frequency:
                 id: buzzer
-                frequency: ${output_freq}
+                frequency: ${buzzer_freq}
             - output.set_level:
                 id: buzzer
-                level: ${output_level}
+                level: 30%
             - delay: !lambda "return duration_ms;"
             - output.turn_off: buzzer
 
@@ -224,9 +215,9 @@ script:
                 duration_ms: !lambda "return duration_ms;"
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 0.0
-                green: 0.0
-                blue: 1.0
+                red: 0%
+                green: 0%
+                blue: 100%
             - script.wait: turn_on_buzzer
 
   - id: play_tone
@@ -251,9 +242,9 @@ script:
                 tone: ${rtttl_confirm}
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 0.0
-                green: 0.0
-                blue: 1.0
+                red: 0%
+                green: 0%
+                blue: 100%
             - script.stop: play_tone
 
       - if:
@@ -265,9 +256,9 @@ script:
                 tone: ${rtttl_reject}
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 1.0
-                green: 0.0
-                blue: 0.0
+                red: 100%
+                green: 0%
+                blue: 0%
             - script.stop: play_tone
 
       - if:
@@ -279,9 +270,9 @@ script:
                 tone: ${rtttl_warning}
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 1.0
-                green: 0.8
-                blue: 0.0
+                red: 100%
+                green: 80%
+                blue: 0%
             - script.stop: play_tone
 
       - if:
@@ -293,9 +284,9 @@ script:
                 tone: ${rtttl_success}
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 0.0
-                green: 1.0
-                blue: 0.0
+                red: 0%
+                green: 100%
+                blue: 0%
             - script.stop: play_tone
 
       - logger.log:
@@ -315,9 +306,9 @@ script:
                 duration_ms: 500
                 priority: !lambda "return priority;"
                 volume: !lambda "return volume;"
-                red: 1.0
-                green: 0.0
-                blue: 0.0
+                red: 100%
+                green: 0%
+                blue: 0%
             - script.wait: turn_on_buzzer
             - delay: 250ms
       - delay: 750ms
